Menambahkan dan mengedit file

--- a/Responsive Web Developer/2.My team page master/index.html
+++ b/Responsive Web Developer/2.My team page master/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Icon -->
-  <link rel="icon" href="devchallenges.png" />
-  <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/"/>
+  <link rel="icon" href="image/devchallenges.png"/>
 
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   
   <!-- Styel -->
-  <link rel="stylesheet" href="styel/main.css">
-  <link rel="stylesheet" href="styel/responsive.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/responsive.css">
 
   <title>My Team Page Master</title>
 </head>
