--- a/Responsive Web Developer/3.Interior Consultant/index.html
+++ b/Responsive Web Developer/3.Interior Consultant/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="this is a challenge from Dev Challenges.io">
     <title>Interior Consultant</title>
-    <link rel="icon" href="devchallenges.png" />
+    <link rel="icon" href="image/devchallenges.png" />
 
     <!-- Styel -->
     <link rel="stylesheet" href="css/styel.css">
