--- a/Responsive Web Developer/4.Classic Cheesecake Recipe/index.html
+++ b/Responsive Web Developer/4.Classic Cheesecake Recipe/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="this is a challenge from Dev Challenges.io">
     <title>Recipe Page Master</title>
-    <link rel="icon" href="devchallenges.png" />
+    <link rel="icon" href="image/devchallenges.png"/>
     <!-- Styel -->
-    <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="style/responsive.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
