--- a/Responsive Web Developer/8.Portfolio Master/index.html
+++ b/Responsive Web Developer/8.Portfolio Master/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <header>
       <div class="image-profil">
-        <img src="" alt="Image Profil">
+        <img src="image/images.jpg" alt="Image Profil">
       </div>
       
       <div class="information-profil">
@@ -66,21 +66,21 @@
         <section class="col section-hobbies">
           <h2>Hobbies</h2>
           <div class="item">
-            <img src="image/game.jpg" alt="Image Game">
+            <img src="image/image-hobbies/game.jpg" alt="Image Game">
             <div class="description">
               <h3>Gaming</h3>
               <p>Quisque feugiat malesuada molestie.</p>
             </div>
           </div>
           <div class="item">
-            <img src="image/football.jpg" alt="image football">
+            <img src="image/image-hobbies/football.jpg" alt="image football">
             <div class="description">
               <h3>Football</h3>
               <p>Quisque feugiat malesuada molestie.</p>
             </div>
           </div>
           <div class="item">
-            <img src="image/bike.jpg" alt="image bike">
+            <img src="image/image-hobbies/bike.jpg" alt="image bike">
             <div class="description">
               <h3>Biking</h3>
               <p>Quisque feugiat malesuada molestie.</p>
@@ -91,7 +91,7 @@
           <span>Blog</span>
           <div class="blog-header">
             <h2>How to organize your CSS</h2>
-            <img src="image/work.jpg" alt="image work">
+            <img src="image/image-projects/work.jpg" alt="image work">
           </div>
           <div class="description">
             <p>In this article I tell the story about Proin eu justo sit amet lacus bibendum tincidunt. Vivamus non volutpat nisl, a luctus mi. </p>
@@ -99,11 +99,10 @@
           </div>
           <a href="#">dev.to</a>
         </section>
-
         <section class="col section-experiences">
           <h2>Experiences</h2>
           <div class="item-experiences">
-            <img src="image/Adidas_Logo.svg" alt="Logo">
+            <img src="image/image-experiences/Adidas_Logo.svg" alt="Logo">
             <div class="information-experiences">
               <div class="header-experiences">
                 <p>Feb 2017 - Current</p>
@@ -117,7 +116,7 @@
 
 
           <div class="item-experiences">
-            <img src="image/H&M-Logo.svg" alt="Logo">
+            <img src="image/image-experiences/H&M-Logo.svg" alt="Logo">
             <div class="information-experiences">
               <div class="header-experiences">
                 <p>Aug 2016 - Feb 2018</p>
@@ -144,7 +143,9 @@
           
           <div class="projects-content">
             <div class="col content-item">
-              <div class="img"><img src="" alt=""></div>
+              <div class="img">
+                <img src="image/image-projects/recipe.png" alt="">
+              </div>
               <div class="tage-line">
                 <p>#HTML</p>
                 <p>#CSS</p>
@@ -160,7 +161,9 @@
               </div>
             </div>
             <div class="col content-item">
-              <div class="img"><img src="" alt=""></div>
+              <div class="img">
+                <img src="image/image-projects/gallery.png" alt="">
+              </div>
               <div class="tage-line">
                 <p>#HTML</p>
                 <p>#CSS</p>
@@ -176,7 +179,7 @@
               </div>
             </div>
             <div class="col content-item">
-              <div class="img"><img src="" alt=""></div>
+              <div class="img"><img src="image/image-projects/checkout.png" alt=""></div>
               <div class="tage-line">
                 <p>#HTML</p>
                 <p>#CSS</p>
